fix issues related to app-prop-viewer
Signed-off-by: Satish Wadkar <swadkar@rocketsoftware.com>

--- a/system-apps/app-prop-viewer/webClient/package.json
+++ b/system-apps/app-prop-viewer/webClient/package.json
@@ -2,42 +2,43 @@
   "name": "org.zowe.zlux.appmanager.app.propview.webclient",
   "version": "2.0.0",
   "scripts": {
-    "start": "webpack --progress --colors --watch",
-    "build": "webpack --progress --colors",
+    "start": "webpack --progress --watch",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --progress",
     "i18n": "ng-xi18n -p tsconfig.i18n.json --i18nFormat=xlf  --outFile=messages.xlf",
     "lint": "tslint -c tslint.json \"./**/*.ts\""
   },
   "license": "EPL-2.0",
+  "dependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0",
-    "@angular/animations": "~12.0.0",
-    "@angular/cli": "~12.0.0",
-    "@angular/common": "~12.0.0",
-    "@angular/compiler": "~12.0.0",
-    "@angular/compiler-cli": "~12.0.0",
-    "@angular/core": "~12.0.0",
-    "@angular/forms": "~12.0.0",
-    "@angular/language-service": "~12.0.0",
-    "@angular/platform-browser": "~12.0.0",
-    "@angular/platform-browser-dynamic": "~12.0.0",
-    "@angular/router": "~12.0.0",
+    "@angular/animations": "~18.0.0",
+    "@angular/common": "~18.0.0",
+    "@angular/compiler": "~18.0.0",
+    "@angular/core": "~18.0.0",
+    "@angular/forms": "~18.0.0",
+    "@angular/language-service": "~18.0.0",
+    "@angular/platform-browser": "~18.0.0",
+    "@angular/platform-browser-dynamic": "~18.0.0",
+    "@angular/router": "~18.0.0",
+    "core-js": "~3.19.0",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.3",
+    "zone.js": "~0.14.4",
+    "@angular-devkit/build-angular": "~18.0.0",
+    "@angular/cli": "~18.0.7",
+    "@angular/compiler-cli": "~18.0.0",
     "angular2-template-loader": "~0.6.2",
     "codelyzer": "~6.0.2",
-    "copy-webpack-plugin": "~5.1.2",
-    "core-js": "~3.19.0",
-    "css-loader": "~3.6.0",
-    "exports-loader": "~0.7.0",
-    "html-loader": "~0.5.5",
-    "rxjs": "~6.6.0",
-    "rxjs-compat": "~6.2.2",
-    "source-map-loader": "~1.1.3",
-    "ts-loader": "~8.3.0",
+    "copy-webpack-plugin": "~11.0.0",
+    "css-loader": "~6.8.1",
+    "exports-loader": "~3.1.0",
+    "html-loader": "~4.2.0",
+    "source-map-loader": "~3.0.0",
+    "ts-loader": "~9.2.2",
     "tslint": "~6.1.0",
-    "typescript": "~4.2.0",
-    "url-loader": "2.3.0",
-    "webpack": "~4.46.0",
-    "webpack-cli": "~3.3.0",
-    "webpack-config": "~7.5.0",
-    "zone.js": "~0.11.4"
+    "typescript": "~5.4.5",
+    "url-loader": "~3.0.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-config": "~7.5.0"
   }
 }
