Update angular version for virtual desktop and for prop viewer
Signed-off-by: Satish Wadkar <swadkar@rocketsoftware.com>

--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -7,57 +7,50 @@
     "url": "https://github.com/zowe/zlux-app-manager.git"
   },
   "scripts": {
-    "build:externals": "webpack --progress --config webpack.externals.js",
-    "start": "webpack --watch --color --progress",
-    "build": "webpack --color --progress",
+    "start": "ng build --watch",
+    "build": "ng build && npm run copy",
+    "copy": "cpx node_modules/requirejs/require.js web/",
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
-  "dependencies": {},
-  "devDependencies": {
-    "@angular/animations": "~12.0.0",
-    "@angular/cdk": "~12.0.0",
-    "@angular/common": "~12.0.0",
-    "@angular/compiler": "~12.0.0",
-    "@angular/compiler-cli": "~12.0.0",
-    "@angular/core": "~12.0.0",
-    "@angular/forms": "~12.0.0",
-    "@angular/material": "~12.0.0",
-    "@angular/platform-browser": "~12.0.0",
-    "@angular/platform-browser-dynamic": "~12.0.0",
-    "@angular/router": "~12.0.0",
-    "@types/xmldom": "0.1.29",
-    "@types/node": "18.15.3",
-    "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git#feature/upgrade-angular",
-    "angular-l10n": "~12.0.0",
-    "angular2-template-loader": "~0.6.2",
-    "bootstrap": "~4.3.1",
-    "codelyzer": "~6.0.2",
-    "compression-webpack-plugin": "~9.2.0",
-    "copy-webpack-plugin": "~10.2.0",
+  "dependencies": {
+    "@angular/animations": "~18.0.0",
+    "@angular/cdk": "~18.0.0",
+    "@angular/common": "~18.0.0",
+    "@angular/compiler": "~18.0.0",
+    "@angular/core": "~18.0.0",
+    "@angular/forms": "~18.0.0",
+    "@angular/localize": "~18.0.0",
+    "@angular/material": "~18.0.0",
+    "@angular/platform-browser": "~18.0.0",
+    "@angular/platform-browser-dynamic": "~18.0.0",
+    "@angular/router": "~18.0.0",
+    "@popperjs/core": "^2.11.8",
+    "angular-l10n": "^16.0.0",
+    "bootstrap": "~5.3.2",
     "core-js": "~3.19.0",
-    "css-loader": "~6.5.1",
-    "exports-loader": "~3.1.0",
     "font-awesome": "~4.7.0",
-    "html-loader": "~3.0.1",
-    "html2canvas": "~1.3.2",
-    "jquery": "~3.6.0",
     "moment": "~2.29.4",
-    "ngx-file-drop": "~11.3.0",
+    "ngx-file-drop": "^16.0.0",
     "ngx-i18nsupport": "~0.17.1",
     "popper.js": "~1.14.7",
     "requirejs": "~2.3.6",
-    "rxjs": "~6.6.0",
-    "source-map-loader": "~3.0.0",
-    "style-loader": "~3.3.1",
-    "ts-loader": "~8.3.0",
-    "tslib": "~2.3.0",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.3",
+    "typeface-roboto": "~1.1.13",
+    "zone.js": "~0.14.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^18.0.7",
+    "@angular/cli": "~18.0.7",
+    "@angular/compiler-cli": "~18.0.0",
+    "@ngtools/webpack": "^18.0.0",
+    "@types/node": "^20.12.7",
+    "@types/xmldom": "0.1.29",
+    "codelyzer": "~6.0.2",
+    "cpx": "^1.5.0",
     "tslint": "~6.1.0",
     "tslint-react": "~5.0.0",
-    "typeface-roboto": "~1.1.13",
-    "typescript": "~4.2.0",
-    "webpack": "~5.76.0",
-    "webpack-cli": "~4.9.1",
-    "zone.js": "~0.11.4"
-  }
+    "typescript": "~5.4.5"
+}
 }
