Adding a working UI shell for the Languages app
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/system-apps/system-settings-preferences/webClient/package.json
+++ b/system-apps/system-settings-preferences/webClient/package.json
@@ -21,7 +21,6 @@
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
-    "@zlux/widgets": "git+https://github.com:zowe/zlux-widgets.git",
     "angular-l10n": "~16.0.0",
     "angular2-template-loader": "~0.6.2",
     "codelyzer": "~6.0.2",
@@ -29,13 +28,12 @@
     "core-js": "~3.19.0",
     "css-loader": "~6.8.1",
     "exports-loader": "~3.1.0",
-    "file-loader": "~6.2.0",
     "html-loader": "~4.2.0",
     "ngx-i18nsupport": "~0.17.1",
     "rxjs": "~7.8.1",
     "source-map-loader": "~3.0.0",
     "ts-loader": "~9.2.2",
-    "tslib": "~2.3.0",
+    "tslib": "^2.6.3",
     "tslint": "~5.10.0",
     "typescript": "~5.4.5",
     "url-loader": "~3.0.0",
