--- a/system-apps/system-settings-preferences/webClient/package.json
+++ b/system-apps/system-settings-preferences/webClient/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
     "angular-l10n": "~16.0.0",
+    "angular2-template-loader": "~0.6.2",
     "codelyzer": "~6.0.2",
     "copy-webpack-plugin": "~11.0.0",
     "core-js": "~3.19.0",
