add verbose output for debug
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/system-apps/admin-notification-app/webClient/package.json
+++ b/system-apps/admin-notification-app/webClient/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "scripts": {
     "start": "webpack --progress --watch",
-    "build": "webpack --progress",
+    "build": "webpack --progress --stats verbose",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
   "private": false,
