--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
     "@popperjs/core": "^2.11.8",
+    "@zlux/widgets": "github:wadkarsatish/zlux-widgets-angular18#zlux-widgets-angular-library",
     "angular-l10n": "^16.0.0",
     "bootstrap": "~5.3.2",
     "core-js": "~3.19.0",
@@ -38,7 +39,6 @@
     "rxjs": "~7.8.1",
     "tslib": "^2.6.3",
     "typeface-roboto": "~1.1.13",
-    "zlux-widgets": "github:wadkarsatish/zlux-widgets-angular18#zlux-widgets-angular-library",
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
