--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -26,7 +26,7 @@
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
     "@popperjs/core": "^2.11.8",
-    "@zlux/widgets": "github:wadkarsatish/zlux-widgets-angular18#zlux-widgets-angular-library",
+    "@zlux/widgets": "github:wadkarsatish/zlux-widgets-angular18#widgets-Angular-Library",
     "angular-l10n": "^16.0.0",
     "bootstrap": "~5.3.2",
     "core-js": "~3.19.0",
