--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -27,7 +27,7 @@
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
     "@popperjs/core": "^2.11.8",
-    "@zlux/widgets": "github:wadkarsatish/zlux-widgets-angular18#widgets-Angular-Library",
+    "@zlux/widgets": "github:zowe/zlux-widgets#v3.x/master",
     "angular-l10n": "^16.0.0",
     "bootstrap": "~5.3.2",
     "core-js": "~3.38.1",
